--- a/index.html
+++ b/index.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <h1 class="title">Reliable, efficient delivery <span class="break">Powered by Technology</span></h1>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  <p class="subheading">Our Artificial Intelligence powered tools use millions of project data points
+    to ensure that your project is successful</p>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+  <div class="card">
+    <h2>Supervisor</h2>
+    <p>Monitors activity to identify project roadblocks</p>
+    <img src="images/icon-supervisor.svg" alt="Supervisor">
+  </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+  <div class="card">
+    <h2>Team Builder</h2>
+    <p>Scans our talent network to create the optimal team for your project</p>
+    <img src="images/icon-team-builder.svg" alt="team builder">
+  </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  <div class="card">
+    <h2>Karma</h2>
+    <p>Regularly evaluates our talent to ensure quality</p>
+    <img src="images/icon-karma.svg" alt="light bulb">
+  </div>
 
-  
+  <div class="card">
+    <h2>Calculator</h2>
+    <p>Uses data from past projects to provide better delivery estimates</p>
+    <img src="images/icon-calculator.svg" alt="Calculator">
+  </div>
+
+
+
+
+
+
+
+
+
+
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
 </body>
+
 </html>
