small screen mobiles done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Four card feature section</title>
+  <link rel="stylesheet" href="styles.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -30,28 +31,30 @@
   <p class="subheading">Our Artificial Intelligence powered tools use millions of project data points
     to ensure that your project is successful</p>
 
-  <div class="card">
-    <h2>Supervisor</h2>
-    <p>Monitors activity to identify project roadblocks</p>
-    <img src="images/icon-supervisor.svg" alt="Supervisor">
-  </div>
+  <div class="cards-wrapper">
+    <div class="card">
+      <h2>Supervisor</h2>
+      <p>Monitors activity to identify project roadblocks</p>
+      <img src="images/icon-supervisor.svg" alt="Supervisor">
+    </div>
 
-  <div class="card">
-    <h2>Team Builder</h2>
-    <p>Scans our talent network to create the optimal team for your project</p>
-    <img src="images/icon-team-builder.svg" alt="team builder">
-  </div>
+    <div class="card">
+      <h2>Team Builder</h2>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="images/icon-team-builder.svg" alt="team builder">
+    </div>
 
-  <div class="card">
-    <h2>Karma</h2>
-    <p>Regularly evaluates our talent to ensure quality</p>
-    <img src="images/icon-karma.svg" alt="light bulb">
-  </div>
+    <div class="card">
+      <h2>Karma</h2>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="images/icon-karma.svg" alt="light bulb">
+    </div>
 
-  <div class="card">
-    <h2>Calculator</h2>
-    <p>Uses data from past projects to provide better delivery estimates</p>
-    <img src="images/icon-calculator.svg" alt="Calculator">
+    <div class="card">
+      <h2>Calculator</h2>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="images/icon-calculator.svg" alt="Calculator">
+    </div>
   </div>
 
 
